[tool.poetry]
name = "doesHaveBottleForVentura"
version = "1.0.1"
description = "Little Python script for checking if your current installed Homebrew formulae have bottles with support for macOS Ventura"
authors = ["SecondThundeR <awayfromgalaxy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asyncio = "^3.4.3"
aiohttp = "^3.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
